--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,5 +14,6 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile 'org.java-websocket:Java-WebSocket:1.3.9'
 }
   
