--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.iskander508">
+          package="com.iskander508.WebSocketImpl">
           <uses-permission android:name="android.permission.INTERNET" />
-          <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
           <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
   
