--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,23 @@
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion safeExtGet('compileSdkVersion', 23)
+    buildToolsVersion safeExtGet('buildToolsVersion', '23.0.1')
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.4"
     }
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'org.java-websocket:Java-WebSocket:1.3.9'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'org.java-websocket:Java-WebSocket:1.3.9'
 }
   
